--- a/2.html
+++ b/2.html
@@ -7,6 +7,6 @@
 <body>
     <h1>GPU</h1>
     <p>GPU는 그래픽 처리 장치로, 컴퓨터에서 이미지, 비디오, 3D 그래픽 등 시각적 요소를 빠르게 처리하는 역할을 합니다. 원래는 그래픽 작업을 효율적으로 처리하기 위해 개발되었지만, 그 높은 병렬 처리 능력 덕분에 그래픽 외에도 다양한 작업에 활용되고 있습니다.</p>
-    <img src="https://postfiles.pstatic.net/MjAyNDA5MjNfNDEg/MDAxNzI3MDU2NDgwOTA3.LndyqDi0FyX_EnsIC2_5z-pbDpWMOQBdL8zD4xnVxJgg.bY6oLojmmonuwWGvDz2Y0QXGic2Oftp4iB3eQkGr5hkg.JPEG/gpucpu01.jpg?type=w773" alt="" height="300">
+    <img src="https://tse4.mm.bing.net/th?id=OIP.rPLuur5bAS4-KVsvtrDgmAHaGn&pid=Api&P=0&h=220" alt="" height="300">
 </body>
 </html>
